# python-base-project-main

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: dev_pipeline.yml  feature_branch_pipeline.yml  main_pipeline.yml
kube/base/: deployment.yaml  kustomization.yaml  service.yaml
src/: __init__.py  app.py  logger.py  routes.py
src/common/: base_model.py  generic_responses.py
src/common/constants/: exceptions_codes.py
src/common/exceptions/: __init__.py  user_exception.py
src/common/utils/: api_helpers.py
src/common/utils/jwt_auth/: jwt_tools.py
src/config/: open_api.py  permission_groups.py
src/database/migrations/versions/: 9c1f74b78ebe_initial.py
src/database/seeds/: 01_user_role_permissions_seed.py  __init__.py  user_role_permissions_seed.py
src/modules/public/controller/: public_controller.py
src/modules/public/dto/: login_dto.py
src/modules/user/controller/: user_controller.py
src/modules/user/dao/: user_dao.py
src/modules/user/model/: permission.py  role.py  user.py  user_role_permission.py
src/modules/user/service/: user_service.py
tests/: conftest.py  test_user_service.py
