[tool.poetry]
name = "tms"
version = "0.1.0"
description = "The project for Traxporta TMS"
authors = ["Alkaid Llanes <a.llanes@traxion.global>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.0"
alembic = "1.12.1"
blinker = "1.7.0"
click = "8.1.7"
coverage = "7.3.2"
flask = "3.0.0"
flask-migrate = "4.0.5"
flask-sqlalchemy = "3.1.1"
flask-testing = "0.8.1"
gunicorn = "21.2.0"
iniconfig = "2.0.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
mako = "1.3.0"
markupsafe = "2.1.3"
packaging = "23.2"
pluggy = "1.3.0"
pytest = "7.4.3"
pytest-cov = "4.1.0"
python-dotenv = "1.0.0"
sqlalchemy = "2.0.23"
typing-extensions = "4.8.0"
werkzeug = "3.0.1"
psycopg2 = "^2.9.9"
pytest-mock = "^3.12.0"
requests = "^2.31.0"
pyjwt = "2.5.0"
cryptography = "37.0.4"
pydantic = "^2.5.2"
flask-cors = "^4.0.0"
sentry-sdk = {extras = ["flask"], version = "^1.39.1"}
flask-openapi3 = "^3.0.1"
flask-jwt-extended = "^4.6.0"
email-validator = "^2.1.1"
flask-seeder = "^1.2.0"
setuptools = "^69.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
